# Jujutsu-Kaisen-Season-2

./: .gitignore  build.gradle.kts  description.vm  setup.cfg  sub.properties
25/: jjk_25.py  jjk_25_keyframes.txt  jjk_25_subs_OP3.ass  jjk_25_subs_dialogue.ass  jjk_25_subs_typesets.ass
26/: jjk_26.py  jjk_26_keyframes.txt  jjk_26_subs_dialogue.ass  jjk_26_subs_typesets.ass
27/: jjk_27.py  jjk_27_keyframes.txt  jjk_27_subs_dialogue.ass  jjk_27_subs_insert.ass  jjk_27_subs_typesets.ass
28/: jjk_28.py  jjk_28_keyframes.txt  jjk_28_subs_dialogue.ass  jjk_28_subs_typesets.ass
29/: jjk_29.py  jjk_29_keyframes.txt  jjk_29_subs_dialogue.ass  jjk_29_subs_typesets.ass
30/: jjk_30.py  jjk_30_keyframes.txt  jjk_30_subs_OP4.ass  jjk_30_subs_dialogue.ass  jjk_30_subs_typesets.ass
31/: jjk_31.py  jjk_31_keyframes.txt  jjk_31_subs_dialogue.ass  jjk_31_subs_typesets.ass
32/: jjk_32.py  jjk_32_keyframes.txt  jjk_32_subs_dialogue.ass  jjk_32_subs_typesets.ass
33/: jjk_33.py  jjk_33_keyframes.txt  jjk_33_subs_dialogue.ass  jjk_33_subs_typesets.ass
34/: jjk_34.py  jjk_34_keyframes.txt  jjk_34_subs_dialogue.ass  jjk_34_subs_typesets.ass
35/: jjk_35.py  jjk_35_keyframes.txt  jjk_35_subs_dialogue.ass  jjk_35_subs_typesets.ass
36/: jjk_36.py  jjk_36_keyframes.txt  jjk_36_subs_dialogue.ass  jjk_36_subs_typesets.ass
37/: jjk_37.py  jjk_37_keyframes.txt  jjk_37_subs_dialogue.ass  jjk_37_subs_typesets.ass
38/: jjk_38.py  jjk_38_keyframes.txt  jjk_38_subs_dialogue.ass  jjk_38_subs_typesets.ass
39/: jjk_39.py  jjk_39_keyframes.txt  jjk_39_subs_dialogue.ass  (+1 more)
40/: jjk_40.py  (+3 more)
(+45 files in other folders)
