[metadata]
name = kaisen_common
version = 2.1.0
license = MIT
description = Scripts for encoding Jujutsu Kaisen Season 2
url = https://github.com/notdedsec/jujutsu-kaisen-Season-2
author = dedsec
author_email = notdedsec@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = kaisen_common
include_package_data = True
